--- a/reference.bib
+++ b/reference.bib
@@ -28,7 +28,6 @@
 @String { TPAMI    = {IEEE Trans. Pattern Anal. Mach. Intell.} }
 @String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
 
-
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas Guibas},
   title     = {Learning representations and generative models for {3D} point clouds},
@@ -106,13 +105,13 @@
   year      = {2009}
 }
 
-
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
   booktitle = {Advances in Spatial Databases},
   title     = {{3D} shape histograms for similarity search and classification in spatial databases},
   year      = {1999}
 }
+
 
 @inproceedings{Aoki2019,
   author    = {Aoki, Yasuhiro and Goforth, Hunter and Arun Srivatsan, Rangaprasad and Lucey, Simon},
@@ -180,7 +179,6 @@
   year      = {2021}
 }
 
-
 @article{Au2012,
   author  = {Au, O.K.-C. and Youyi Zheng and Menglin Chen and Pengfei Xu and Chiew-Lan Tai},
   title   = {Mesh segmentation with concavity-aware fields},
@@ -218,6 +216,7 @@
   number  = {12}
 }
 
+
 @book{Baerentzen2002,
   title     = {Manipulation of volumetric solids with applications to sculpting},
   author    = {B{\ae}rentzen, J Andreas},
@@ -239,6 +238,7 @@
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @article{Bailey2018,
   author  = {Bailey, Stephen W. and Otte, Dave and Dilorenzo, Paul and O'Brien, James F.},
@@ -268,13 +268,13 @@
   number  = {1}
 }
 
+
 @article{Battaglia2018,
   title   = {Relational inductive biases, deep learning, and graph networks},
   author  = {Battaglia, Peter W and Hamrick, Jessica B and Bapst, Victor and Sanchez-Gonzalez, Alvaro and Zambaldi, Vinicius and Malinowski, Mateusz and Tacchetti, Andrea and Raposo, David and Santoro, Adam and Faulkner, Ryan and others},
   journal = {arXiv preprint arXiv:1806.01261},
   year    = {2018}
 }
-
 
 @inproceedings{Behley2019,
   title     = {{SemanticKITTI}: A dataset for semantic scene understanding of {Lidar} sequences},
@@ -291,6 +291,7 @@
   year    = {2002}
 }
 
+
 @article{Bengio2013,
   author  = {Y. {Bengio} and A. {Courville} and P. {Vincent}},
   journal = TPAMI,
@@ -299,7 +300,6 @@
   volume  = {35},
   number  = {8}
 }
-
 
 @article{Berger2017,
   author  = {Berger, Matthew and Tagliasacchi, Andrea and Seversky, Lee M. and Alliez, Pierre and Guennebaud, Ga\"{e}l and Levine, Joshua A. and Sharf, Andrei and Silva, Claudio T.},
@@ -334,6 +334,7 @@
   year      = {2017}
 }
 
+
 @article{Bommes2009,
   author  = {Bommes, David and Zimmer, Henrik and Kobbelt, Leif},
   title   = {Mixed-integer quadrangulation},
@@ -342,6 +343,7 @@
   volume  = {28},
   number  = {3}
 }
+
 
 @article{Bommes2013,
   author  = {Bommes, David and Campen, Marcel and Ebke, Hans-Christian and Alliez, Pierre and Kobbelt, Leif},
@@ -408,7 +410,6 @@
   year      = {2011}
 }
 
-
 @book{Bridson2015,
   title     = {Fluid simulation for computer graphics},
   author    = {Bridson, Robert},
@@ -436,6 +437,7 @@
   booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @article{Bugliarello2021,
   title   = {Multimodal pretraining unmasked: A meta-analysis and a unified framework of vision-and-language {BERT}s},
@@ -485,7 +487,6 @@
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @inproceedings{Caron2018,
   author    = {Caron, Mathilde and Bojanowski, Piotr and Joulin, Armand and Douze, Matthijs},
@@ -547,6 +548,7 @@
   volume  = {28},
   number  = {3}
 }
+
 
 @inproceedings{Chen2014,
   author    = {Chen, Dong and Ren, Shaoqing and Wei, Yichen and Cao, Xudong and Sun, Jian},
@@ -692,7 +694,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Crane2013,
   author    = {Keenan Crane and Fernando de Goes and Mathieu Desbrun and Peter Schr\"{o}der},
   title     = {Digital geometry processing with discrete exterior calculus},
@@ -725,6 +726,7 @@
   year    = {1989}
 }
 
+
 @inproceedings{Dai2017,
   author    = {Dai, Angela and Qi, Charles R. and Niessner, Matthias},
   title     = {Shape completion using {3D}-encoder-predictor CNNs and shape synthesis},
@@ -732,14 +734,12 @@
   year      = {2017}
 }
 
-
 @inproceedings{Dai2017a,
   author    = {Dai, Angela and Chang, Angel X. and Savva, Manolis and Halber, Maciej and Funkhouser, Thomas and Nie{\ss}ner, Matthias},
   booktitle = CVPR,
   title     = {{ScanNet}: Richly-annotated {3D} Reconstructions of Indoor Scenes},
   year      = {2017}
 }
-
 
 @inproceedings{Dai2018,
   author    = {Dai, Angela and Ritchie, Daniel and Bokeloh, Martin and Reed, Scott and Sturm, J{\"u}rgen and Nie{\ss}ner, Matthias},
@@ -772,6 +772,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Desbrun1999,
   author    = {Desbrun, Mathieu and Meyer, Mark and Schr\"{o}der, Peter and Barr, Alan H.},
   title     = {Implicit fairing of irregular meshes using diffusion and curvature flow},
@@ -785,7 +786,6 @@
   title   = {{BERT}: Pre-training of deep bidirectional transformers for language understanding},
   year    = {2018}
 }
-
 
 @article{Diebel2006,
   author  = {Diebel, James R. and Thrun, Sebastian and Br\"{u}nig, Michael},
@@ -819,12 +819,14 @@
   year      = {2014}
 }
 
+
 @inproceedings{Dosovitskiy2021,
   title     = {An image is worth 16x16 words: Transformers for image recognition at scale},
   author    = {Dosovitskiy, Alexey and Beyer, Lucas and Kolesnikov, Alexander and Weissenborn, Dirk and Zhai, Xiaohua and Unterthiner, Thomas and Dehghani, Mostafa and Minderer, Matthias and Heigold, Georg and Gelly, Sylvain and others},
   booktitle = ICLR,
   year      = {2021}
 }
+
 
 @article{Du2018,
   author  = {Tao Du and Jeevana Priya Inala and Yewen Pu and Andrew Spielberg and Adriana Schulz and Daniela Rus and Armando Solar-Lezama and Wojciech Matusik},
@@ -891,6 +893,13 @@
   title     = {A point set generation network for {3D} object reconstruction from a single image},
   booktitle = CVPR,
   year      = {2017}
+}
+
+@inproceedings{Fan2022,
+  title     = {Embracing single stride {3D} object detector with sparse transformer},
+  author    = {Fan, Lue and Pang, Ziqi and Zhang, Tianyuan and Wang, Yu-Xiong and Zhao, Hang and Wang, Feng and Wang, Naiyan and Zhang, Zhaoxiang},
+  booktitle = CVPR,
+  year      = {2022}
 }
 
 @inproceedings{Fanello2014,
@@ -1010,7 +1019,6 @@
   year      = {2011}
 }
 
-
 @article{Golovinskiy2008,
   author  = {Golovinskiy, Aleksey and Funkhouser, Thomas},
   title   = {Randomized cuts for {3D} mesh analysis},
@@ -1019,7 +1027,6 @@
   volume  = {27},
   number  = {5}
 }
-
 
 @article{Golovinskiy2009,
   author  = {Aleksey Golovinskiy and Thomas Funkhouser},
@@ -1045,6 +1052,7 @@
   year      = {2016}
 }
 
+
 @inproceedings{Graham2015,
   author    = {Ben Graham},
   title     = {Sparse {3D} convolutional neural networks},
@@ -1058,6 +1066,7 @@
   journal = {arXiv preprint arXiv:1706.01307},
   year    = {2017}
 }
+
 
 @inproceedings{Graham2018,
   author    = {Benjamin Graham and Martin Engelcke and Laurens van der Maaten},
@@ -1166,14 +1175,12 @@
   year      = {2010}
 }
 
-
 @inproceedings{Ha2017,
   title     = {{HyperNetworks}},
   author    = {Ha, David and Dai, Andrew and Le, Quoc V},
   booktitle = ICLR,
   year      = {2017}
 }
-
 
 @inproceedings{Hadsell2006,
   author    = {Raia Hadsell and Sumit Chopra and Yann LeCun},
@@ -1189,12 +1196,14 @@
   year      = {2017}
 }
 
+
 @inproceedings{Han2017,
   author    = {Xiaoguang Han and Zhen Li and Haibin Huang and Evangelos Kalogerakis and Yizhou Yu},
   title     = {High-resolution shape completion using deep neural networks for global structure and local geometry inference},
   booktitle = ICCV,
   year      = {2017}
 }
+
 
 @article{Han2017a,
   author  = {Han, Xiaoguang and Gao, Chang and Yu, Yizhou},
@@ -1239,7 +1248,6 @@
   number  = {1}
 }
 
-
 @article{Hart1996,
   title   = {Sphere tracing: A geometric method for the antialiased ray tracing of implicit surfaces},
   author  = {Hart, John C},
@@ -1248,7 +1256,6 @@
   number  = {10},
   year    = {1996}
 }
-
 
 @inproceedings{Hassani2019,
   title     = {Unsupervised multi-task feature learning on point clouds},
@@ -1266,12 +1273,14 @@
   number  = {12}
 }
 
+
 @inproceedings{Hazarika2020,
   title     = {Misa: Modality-invariant and-specific representations for multimodal sentiment analysis},
   author    = {Hazarika, Devamanyu and Zimmermann, Roger and Poria, Soujanya},
   booktitle = {ACM International Conference on Multimedia},
   year      = {2020}
 }
+
 
 @article{He2013,
   author  = {He, Lei and Schaefer, Scott},
@@ -1432,7 +1441,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Jampani2016,
   author    = {Jampani, Varun and Kiefel, Martin and Gehler, Peter V.},
   title     = {Learning sparse high dimensional filters: image filtering, dense {CRFs} and bilateral neural networks},
@@ -1455,6 +1463,7 @@
   volume  = {37},
   number  = {5}
 }
+
 
 @inproceedings{Jiang2019,
   author    = {Jiang, Jianwen and Bao, Di and Chen, Ziqiang and Zhao, Xibin and Gao, Yue},
@@ -1853,7 +1862,6 @@
   year    = {2008}
 }
 
-
 @inproceedings{Levy2013,
   author    = {L\'{e}vy, Bruno and Bonneel, Nicolas},
   title     = {Variational anisotropic surface meshing with {Voronoi} parallel linear enumeration},
@@ -1879,6 +1887,7 @@
   volume  = {30},
   number  = {4}
 }
+
 
 @inproceedings{Li2016,
   author    = {Yangyan Li and Soeren Pirk and Hao Su and Charles R. Qi and Leonidas J. Guibas},
@@ -1934,7 +1943,6 @@
   journal = {arXiv preprint arXiv:2111.01353}
 }
 
-
 @article{Lim2016,
   author  = {Lim, Isaak and Gehre, Anne and Kobbelt, Leif},
   title   = {Identifying style of {3D} shapes using deep metric learning},
@@ -1959,6 +1967,7 @@
   year      = {2021}
 }
 
+
 @article{Liu2007,
   author  = {Ligang Liu and Chiew-Lan Tai and Zhongping Ji and Guojin Wang},
   title   = {Non-Iterative approach for global mesh optimization},
@@ -1967,7 +1976,6 @@
   volume  = {39},
   number  = {9}
 }
-
 
 @inproceedings{Liu2018,
   author    = {Zhijian Liu and William T. Freeman and Joshua B. Tenenbaum and Jiajun Wu},
@@ -1998,7 +2006,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Liu2019a,
   title     = {Point-Voxel {CNN} for Efficient {3D} Deep Learning},
   author    = {Liu, Zhijian and Tang, Haotian and Lin, Yujun and Han, Song},
@@ -2020,6 +2027,7 @@
   journal = {arXiv:2012.13089},
   year    = {2020}
 }
+
 
 @inproceedings{Liu2020b,
   title     = {A Closer Look at Local Aggregation Operators in Point Cloud Analysis},
@@ -2056,6 +2064,7 @@
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Liu2021d,
   title   = {Self-supervised learning: Generative or contrastive},
@@ -2240,7 +2249,7 @@
 }
 
 @inproceedings{Misra2021,
-  title     = {{An End-to-End Transformer Model for {3D} Object Detection}},
+  title     = {An End-to-End Transformer Model for {3D} Object Detection},
   author    = {Misra, Ishan and Girdhar, Rohit and Joulin, Armand},
   booktitle = ICCV,
   year      = {2021}
@@ -2448,7 +2457,6 @@
   year      = {2017}
 }
 
-
 @article{Pauly2006,
   author  = {Pauly, Mark and Kobbelt, Leif and Gross, Markus},
   title   = {Point-based multiscale surface representation},
@@ -2480,7 +2488,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{Prakash2019,
   title     = {Structured domain randomization: Bridging the reality gap by context-aware synthetic data},
   author    = {Prakash, Aayush and Boochoon, Shaad and Brophy, Mark and Acuna, David and Cameracci, Eric and State, Gavriel and Shapira, Omer and Birchfield, Stan},
@@ -2495,12 +2502,14 @@
   year      = {2016}
 }
 
+
 @inproceedings{Qi2017,
   author    = {Qi, Charles R. and Yi, Li and Su, Hao and Guibas, Leonidas J.},
   title     = {{PointNet++}: Deep hierarchical feature learning on point sets in a metric space},
   booktitle = NeurIPS,
   year      = {2017}
 }
+
 
 @inproceedings{Qi2017a,
   author    = {Charles R. Qi and Hao Su and Kaichun Mo and Leonidas J. Guibas},
@@ -2648,7 +2657,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Ronneberger2015,
   author    = {Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
   title     = {{U-Net}: Convolutional networks for biomedical image segmentation},
@@ -2696,6 +2704,7 @@
   year      = {2017}
 }
 
+
 @inproceedings{Sanchez2020,
   title     = {Learning to simulate complex physics with graph networks},
   author    = {Sanchez-Gonzalez, Alvaro and Godwin, Jonathan and Pfaff, Tobias and Ying, Rex and Leskovec, Jure and Battaglia, Peter},
@@ -2731,7 +2740,6 @@
   booktitle = {Pacific Graphics},
   year      = {2004}
 }
-
 
 @inproceedings{Schelten2015,
   author    = {Schelten, K. and Nowozin, S. and Jancsary, J. and Rother, C. and Roth, S.},
@@ -2782,6 +2790,7 @@
   year    = {2018}
 }
 
+
 @article{Shapira2008,
   author  = {Shapira, Lior and Shamir, Ariel and Cohen-Or, Daniel},
   title   = {Consistent mesh partitioning and skeletonisation using the shape diameter function},
@@ -2831,14 +2840,12 @@
   year      = {2018}
 }
 
-
 @article{Sharma2018a,
   author  = {Sharma, Rishi and Barratt, Shane and Ermon, Stefano and Pande, Vijay},
   title   = {Improved training with curriculum {GANs}},
   journal = {arXiv preprint arXiv:1807.09295},
   year    = {2018}
 }
-
 
 @article{Sharp2020,
   title   = {You can find geodesic paths in triangle meshes by just flipping edges},
@@ -2868,6 +2875,7 @@
   number  = {6}
 }
 
+
 @article{Shi2006,
   author  = {Shi, Lin and Yu, Yizhou and Bell, Nathan and Feng, Wei-Wen},
   title   = {A fast multigrid algorithm for mesh deformation},
@@ -2883,6 +2891,7 @@
   journal = {IEEE Signal Processing Letters},
   year    = {2015}
 }
+
 
 @article{Shi2021,
   title   = {Multi-dataset Pretraining: A Unified Model for Semantic Segmentation},
@@ -2915,14 +2924,12 @@
   number  = {6}
 }
 
-
 @inproceedings{Silva2002,
   author    = {Silva, Vin D and Tenenbaum, Joshua B},
   title     = {Global versus local methods in nonlinear dimensionality reduction},
   booktitle = NeurIPS,
   year      = {2002}
 }
-
 
 @inproceedings{Simonovsky2017,
   title     = {Dynamic edge-conditioned filters in convolutional neural networks on graphs},
@@ -2946,6 +2953,7 @@
   year      = {2017}
 }
 
+
 @article{Sirignano2018,
   title   = {{DGM}: A deep learning algorithm for solving partial differential equations},
   author  = {Sirignano, Justin and Spiliopoulos, Konstantinos},
@@ -2959,6 +2967,7 @@
   booktitle = NeurIPS,
   year      = {2019}
 }
+
 
 @inproceedings{Sitzmann2020,
   title     = {Implicit Neural Representations with Periodic Activation Functions},
@@ -3003,7 +3012,6 @@
   year      = {2004}
 }
 
-
 @article{Srivastava2014,
   author  = {Srivastava, Nitish and Hinton, Geoffrey E and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
   title   = {{Dropout}: A simple way to prevent neural networks from overfitting},
@@ -3012,7 +3020,6 @@
   volume  = {15},
   number  = {1}
 }
-
 
 @inproceedings{Stutz2018,
   author    = {Stutz, David and Geiger, Andreas},
@@ -3028,12 +3035,14 @@
   year      = {2015}
 }
 
+
 @inproceedings{Su2018,
   author    = {Hang Su and Varun Jampani and Deqing Sun and Subhransu Maji and Evangelos Kalogerakis and Ming-Hsuan Yang and Jan Kautz},
   title     = {{SPLATNet}: Sparse lattice networks for point cloud processing},
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Su2019,
   title     = {{VL-BERT}: Pre-training of generic visual-linguistic representations},
@@ -3088,7 +3097,6 @@
   organization = {Eurographics Association}
 }
 
-
 @inproceedings{Sun2015,
   author    = {Xiao Sun and Yichen Wei and Shuang Liang and Xiaoou Tang and Jian Sun},
   title     = {Cascaded hand pose regression},
@@ -3096,6 +3104,12 @@
   year      = {2015}
 }
 
+@inproceedings{Sun2022,
+  title     = {{SWFormer}: Sparse Window Transformer for {3D} Object Detection in Point Clouds},
+  author    = {Sun, Pei and Tan, Mingxing and Wang, Weiyue and Liu, Chenxi and Xia, Fei and Leng, Zhaoqi and Anguelov, Dragomir},
+  booktitle = ECCV,
+  year      = {2022}
+}
 
 @article{Sung2015,
   author  = {Sung, Minhyuk and Kim, Vladimir G and Angst, Roland and Guibas, Leonidas},
@@ -3106,6 +3120,7 @@
   number  = {6}
 }
 
+
 @article{Surazhsky2005,
   title   = {Fast exact and approximate geodesics on meshes},
   author  = {Surazhsky, Vitaly and Surazhsky, Tatiana and Kirsanov, Danil and Gortler, Steven J and Hoppe, Hugues},
@@ -3114,6 +3129,7 @@
   number  = {3},
   year    = {2005}
 }
+
 
 @article{Tagliasacchi2011,
   author  = {Tagliasacchi, Andrea and Olson, Matt and Zhang, Hao and Hamarneh, Ghassan and Cohen-Or, Daniel},
@@ -3154,7 +3170,6 @@
   year    = {2018}
 }
 
-
 @inproceedings{Tang2020,
   title     = {Searching efficient 3D architectures with sparse point-voxel convolution},
   author    = {Tang, Haotian and Liu, Zhijian and Zhao, Shengyu and Lin, Yujun and Lin, Ji and Wang, Hanrui and Han, Song},
@@ -3162,13 +3177,13 @@
   year      = {2020}
 }
 
-
 @inproceedings{Tang2021,
   title     = {{OctField}: Hierarchical Implicit Functions for {3D} Modeling},
   author    = {Tang, Jia-Heng and Chen, Weikai and Yang, Jie and Wang, Bo and Liu, Songrun and Yang, Bo and Gao, Lin},
   booktitle = NeurIPS,
   year      = {2021}
 }
+
 
 @inproceedings{Tang2021a,
   title     = {{SA-ConvONet}: Sign-Agnostic Optimization of Convolutional Occupancy Networks},
@@ -3187,7 +3202,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Tasdizen2002,
   author    = {Tasdizen, Tolga and Whitaker, Ross and Burchard, Paul and Osher, Stanley},
   title     = {Geometric surface smoothing via anisotropic diffusion of normals},
@@ -3195,12 +3209,14 @@
   year      = {2002}
 }
 
+
 @inproceedings{Tatarchenko2016,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
   title     = {Multi-view {3D} models from single images with a convolutional network},
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Tatarchenko2017,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
@@ -3216,7 +3232,6 @@
   year      = {1995}
 }
 
-
 @inproceedings{Thomas2019,
   author    = {Hugues Thomas and Charles R. Qi and Jean-Emmanuel Deschaud and Beatriz Marcotegui and Fran\c{c}ois Goulette and Leonidas J. Guibas},
   title     = {{KPConv}: Flexible and deformable convolution for point clouds},
@@ -3230,6 +3245,7 @@
   booktitle = ECCV,
   year      = {2020}
 }
+
 
 @inproceedings{Tobin2017,
   title     = {Domain randomization for transferring deep neural networks from simulation to the real world},
@@ -3245,14 +3261,12 @@
   year      = {1998}
 }
 
-
 @inproceedings{Tulsiani2017,
   author    = {Tulsiani, Shubham and Zhou, Tinghui and Efros, Alexei A and Malik, Jitendra},
   title     = {Multi-view supervision for single-view reconstruction via differentiable ray consistency},
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @inproceedings{Tulsianiand2017,
   author    = {Shubham Tulsianiand and Hao Su and Leonidas J. Guibas and Alexei A. Efros and Jitendra Malik},
@@ -3261,12 +3275,14 @@
   year      = {2017}
 }
 
+
 @inproceedings{Uhrig2017,
   author    = {Jonas Uhrig and Nick Schneider and Lukas Schneider and Thomas Brox and Andreas Geiger},
   title     = {Sparsity invariant {CNNs}},
   booktitle = threeDV,
   year      = {2017}
 }
+
 
 @inproceedings{Ulyanov2018,
   title     = {Deep image prior},
@@ -3491,14 +3507,12 @@
   year      = {2021}
 }
 
-
 @inproceedings{Wang2021c,
   title     = {Pyramid vision transformer: A versatile backbone for dense prediction without convolutions},
   author    = {Wang, Wenhai and Xie, Enze and Li, Xiang and Fan, Deng-Ping and Song, Kaitao and Liang, Ding and Lu, Tong and Luo, Ping and Shao, Ling},
   booktitle = ICCV,
   year      = {2021}
 }
-
 
 @article{Wang2022,
   title   = {Dual Octree Graph Networks for Learning Adaptive Volumetric Shape Representations},
@@ -3509,6 +3523,7 @@
   number  = {4}
 }
 
+
 @article{Wang2022a,
   title   = {{PVT} v2: Improved baselines with pyramid vision transformer},
   author  = {Wang, Wenhai and Xie, Enze and Li, Xiang and Fan, Deng-Ping and Song, Kaitao and Liang, Ding and Lu, Tong and Luo, Ping and Shao, Ling},
@@ -3517,6 +3532,7 @@
   number  = {3},
   year    = {2022}
 }
+
 
 @misc{Warehouse2018,
   author = {3D Warehouse},
@@ -3580,7 +3596,6 @@
   year      = {2015}
 }
 
-
 @inproceedings{Wu2016,
   author    = {Jiajun Wu and Chengkai Zhang and Tianfan Xue and William T. Freeman and Joshua B. Tenenbaum},
   title     = {Learning a probabilistic latent space of object shapes via {3D} generative-adversarial modeling},
@@ -3594,6 +3609,7 @@
   booktitle = NeurIPS,
   year      = {2017}
 }
+
 
 @article{Wu2018,
   author  = {Wu, Qiaoyun and Xu, Kai and Wang, Jun},
@@ -3627,14 +3643,12 @@
   number  = {4}
 }
 
-
 @inproceedings{Wu2019a,
   author    = {Wenxuan Wu and Zhongang Qi and Li Fuxin},
   booktitle = CVPR,
   title     = {{PointConv}: Deep Convolutional Networks on {3D} Point Clouds},
   year      = {2019}
 }
-
 
 @article{Wu2020,
   title   = {A comprehensive survey on graph neural networks},
@@ -3645,11 +3659,20 @@
   year    = {2020}
 }
 
+
 @article{Wu2021,
   title   = {{CvT}: Introducing convolutions to vision transformers},
   author  = {Wu, Haiping and Xiao, Bin and Codella, Noel and Liu, Mengchen and Dai, Xiyang and Yuan, Lu and Zhang, Lei},
   journal = ICCV,
   year    = {2021}
+}
+
+
+@inproceedings{Wu2022,
+  title   = {Point Transformer V2: Grouped Vector Attention and Partition-based Pooling},
+  author  = {Wu, Xiaoyang and Lao, Yixing and Jiang, Li and Liu, Xihui and Zhao, Hengshuang},
+  journal = NeurIPS,
+  year    = {2022}
 }
 
 @article{Xia2021,
@@ -3721,7 +3744,6 @@
   booktitle = {Proceedings of Graphics Interface}
 }
 
-
 @inproceedings{Xu2015,
   author    = {Li Xu and Jimmy SJ. Ren and Qiong Yan and Renjie Liao and Jiaya Jia},
   title     = {Deep edge-aware filters},
@@ -3738,6 +3760,7 @@
   volume  = {36},
   number  = {1}
 }
+
 
 @article{Xu2015b,
   title   = {Fast wavefront propagation {(FWP)} for computing exact geodesic distances on meshes},
@@ -3762,7 +3785,6 @@
   year      = {2021}
 }
 
-
 @inproceedings{Yagou2002,
   author    = {H. Yagou and Y. Ohtake and A. Belyaev},
   title     = {Mesh smoothing via mean and median filtering applied to face normals},
@@ -3779,6 +3801,7 @@
   issn      = {1530-1052}
 }
 
+
 @inproceedings{Yan2006,
   author    = {Yan, Dong-Ming and Liu, Yang and Wang, Wenping},
   booktitle = {Geom. Model. and Proc.},
@@ -3793,13 +3816,13 @@
   year      = {2016}
 }
 
-
 @article{Yan2020,
   title   = {{COVID-19} Chest {CT} Image Segmentation--A Deep Convolutional Neural Network Solution},
   author  = {Yan, Qingsen and Wang, Bo and Gong, Dong and Luo, Chuan and Zhao, Wei and Shen, Jianhu and Shi, Qinfeng and Jin, Shuo and Zhang, Liang and You, Zheng},
   journal = {arXiv preprint arXiv:2004.10987},
   year    = {2020}
 }
+
 
 @article{Yang2015,
   title   = {{Go-ICP}: A globally optimal solution to {3D ICP} point-set registration},
@@ -3847,7 +3870,6 @@
   number  = {6}
 }
 
-
 @misc{Yi2017,
   author       = {Li Yi and Lin Shao and Manolis Savva and etal.},
   title        = {Large-scale {3D} shape reconstruction and segmentation from {ShapeNetCore55}},
@@ -3873,6 +3895,7 @@
   year      = {2017}
 }
 
+
 @article{Yin2018,
   author  = {Kangxue Yin and Hui Huang and Daniel Cohen-Or and Hao Zhang},
   title   = {{P2P-NET}: Bidirectional Point Displacement Net for Shape Transform},
@@ -3891,7 +3914,6 @@
   year    = {2013}
 }
 
-
 @article{Ying2014,
   title   = {{Parallel Chen-Han (PCH)} algorithm for discrete geodesics},
   author  = {Ying, Xiang and Xin, Shi-Qing and He, Ying},
@@ -3908,6 +3930,7 @@
   title     = {{PVNet}: A joint convolutional network of point cloud and multi-view for {3D} shape recognition},
   year      = {2018}
 }
+
 
 @article{Yu2004,
   author  = {Yu, Yizhou and Zhou, Kun and Xu, Dong and Shi, Xiaohan and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
@@ -3939,11 +3962,11 @@
   year      = {2021}
 }
 
-@article{Yu2021a,
-  title   = {{Point-BERT}: Pre-training {3D} Point Cloud Transformers with Masked Point Modeling},
-  author  = {Yu, Xumin and Tang, Lulu and Rao, Yongming and Huang, Tiejun and Zhou, Jie and Lu, Jiwen},
-  journal = {arXiv:2111.14819},
-  year    = {2021}
+@inproceedings{Yu2022,
+  title     = {{Point-BERT}: Pre-training {3D} point cloud transformers with masked point modeling},
+  author    = {Yu, Xumin and Tang, Lulu and Rao, Yongming and Huang, Tiejun and Zhou, Jie and Lu, Jiwen},
+  booktitle = CVPR,
+  year      = {2022}
 }
 
 
